--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ python-dotenv==1.1.1
 langchain-openai==0.3.27
 langchain-core==0.3.68
 langgraph==0.5.2
+langchain-community==0.3.27
+langchain-text-splitters==0.3.8
