--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ langchain-core==0.3.68
 langgraph==0.5.2
 langchain-community==0.3.27
 langchain-text-splitters==0.3.8
+faiss-cpu==1.11.0
+langchain-google-genai==2.1.7
