--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ langchain-community==0.3.27
 langchain-text-splitters==0.3.8
 faiss-cpu==1.11.0
 langchain-google-genai==2.1.7
+Sickle==0.7.0
+xmltodict==0.14.2
