feat(web): add Next.js frontend with slider and source checkboxes, proxy API to Flask
- Introduce `frontend/` (Next 12, pages router) with a UI for text input,
  lookback window slider, and source filters.
- Add rewrite proxy for `/api/*` to Flask (`NEXT_PUBLIC_BACKEND_URL`)
- Lock Node engines and ignore build artifacts/node_modules in .gitignore

Back-end:
- Add Flask app (`flask_app.py`) already present to expose `/api/search`.
- No reimplementation of query logic; uses `PaperRepository`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
 .env
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
+.DS_Store
+
+# Frontend build artifacts
+frontend/.next/
+frontend/out/
+frontend/.eslintcache
+frontend/node_modules/
+frontend/.turbo/
+
+# Local env/config
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
