--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,10 @@
     "@types/react-dom": "17.0.25",
     "eslint": "8.57.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "autoprefixer": "10.4.17",
+    "postcss": "8.4.14",
+    "tailwindcss": "3.2.7",
+    "daisyui": "2.51.6"
   }
 }
